--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Evolutionary Architecture
 description: Website for the book Evolutionary Architecture
 paginate: 10
-baseurl: ''
+baseurl: '/evolutionary-architecture-web'
 gems: [jekyll-paginate]
 paginate_path: "page:num"
