--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 name: Evolutionary Architecture
 description: Website for the book Evolutionary Architecture
+exclude: [_data, lib/, rakefile]
 paginate: 10
 baseurl: ''
 gems: [jekyll-paginate]
