--- a/_data/ffkatas/LegalityOfOpenSourceLibraries.yaml
+++ b/_data/ffkatas/LegalityOfOpenSourceLibraries.yaml
@@ -1,5 +1,5 @@
 ---
-title: Legility of Open Source Libraries
+title: Legality of Open Source Libraries
 description: "PenultimateWidgets lawyers became worried about the license terms of the open source libraries PenultimateWidgets used--they wanted to make sure they weren't allowing any viral licenses. They did the initial check of the licenses, but then one asked the developers: what happens if one of the frameworks changes their license?"
 categories: atomic, triggered, manual
 requirements:
